Make snowflake opt-in, fix multipart listing being too wide

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -91,10 +91,44 @@ details {
 	margin-bottom: 15px;
 }
 
-details.snowflake > summary {
-	font-size: larger;
-	> img {
-		height: 1em;
+details.snowflake {
+	> summary {
+		// font-size: larger;
+
+		> div {
+			display: inline-flex;
+			align-items: baseline;
+			img.snowflake {
+				opacity: 50%;
+				height: 1em;
+				margin-right: 4px;
+				position: relative;
+				top: 2px;
+			}
+		}
+	}
+	blockquote {
+		font-size: 15px;
+		margin-left: 3px;
+	}
+	button#load-snowflake {
+		background: none!important;
+		border: none;
+		padding: 0!important;
+		/*optional*/
+		font-family: arial, sans-serif;
+		/*input has OS specific font-family*/
+		color: $brand-color;
+		// text-decoration: underline;
+		cursor: pointer;
+		font-size: larger;
+	}
+	button#load-snowflake:hover {
+		color: #111;
+		text-decoration: underline;
+	}
+	iframe#snowflake-iframe {
+		margin: 0 auto;
 	}
 }
 
@@ -526,7 +560,7 @@ div.multipart {
 div.multipart.center {
 	margin-left: auto;
 	margin-right: auto;
-	width: max-content
+	// width: max-content
 }
 
 dl {
